<resources>
    <string name="app_name">ProyectoMarcos</string>
    <string name="listadeSocios">LISTA DE SOCIOS</string>
    <string name="dondeEstoy">¿DONDE ESTOY?</string>
    <string name="tiempo">EL TIEMPO</string>
    <string name="normativa">NORMATIVA</string>
    <string name="emergencias">EMERGENCIAS</string>
    <string name="cerrarSesion">CERRAR SESIÓN</string>
    <string name="conectar">CONECTAR</string>
    <string name="registrar">REGISTRAR</string>
    <string name="pass">Contraseña:</string>
    <string name="usuario">email</string>
    <string name="inCorreo">Introduzca su usuario:</string>
    <string name="inPass">Introduzca su contraseña:</string>
    <string name="introduce">Rellena con tus datos</string>
    <string name="socioNum">Socio Nº:</string>
    <string name="unounodos">112</string>
    <string name="cientodoce">Emergencias</string>
    <string name="numGCivil">062</string>
    <string name="nombre">Nombre:</string>
    <string name="apellido">Apellido:</string>
    <string name="Telefono">Telefono</string>
    <string name="gCivil">Guardia Civil</string>
    <string name="guardaLocal">Guarda del coto</string>
    <string name="presidente">Presidente del coto</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email:</string>
    <string name="prompt_password">contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Datos Incorrectos</string>
    <string name="correo">email</string>
    <string name="llamada">Llamar al socio</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="invalid_password">Rellena todos los campos correctamente</string>
    <string name="dialog">Si aceptas cambiarás tu ubicación marcada.\n ¿Estás seguro?</string>
    <string name="prefs_file">com.example.proyectomarcos.PREFERENCE_FILE_KEY</string>

    <!-- STRING DEL TIEMPO -->
    <string name="tempMin">Min:</string>
    <string name="tempMax">Max:</string>
    <string name="tempHumedad">Humedad:</string>
    <string name="tempVViento">Vel. Viento:</string>
    <string name="tempDViento">Dir. Viento:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="nav_drawer_open">Opened</string>
    <string name="nav_drawer_close">closed</string>
    <!-- <string name=""></string>
    -->
</resources>